--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0; url=citation-chat/index.html">
-  <title>Redirecting to Citation Chat</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 40px;
-      line-height: 1.6;
-    }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    h1 {
-      color: #2196f3;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Citation Knowledge Base</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #2c3e50;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Citation Chat</h1>
-    <p>Redirecting to the Citation Chat application...</p>
-    <p>If you are not redirected automatically, <a href="citation-chat/index.html">click here</a>.</p>
-  </div>
+    <h1>Citation Knowledge Base</h1>
+    <p>This is a simple knowledge base for in-line citations.</p>
+    <p>Successfully deployed with GitHub Actions!</p>
 </body>
 </html> 
